Update project names and copyright year in index.html

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
                 <!-- Project Card 1 --><div class="project-card bg-white rounded-xl shadow-lg p-6 border border-gray-100">
-                    <h4 class="text-xl font-bold text-indigo-600 mb-2">Project Name 1: SaaS Platform</h4>
+                    <h4 class="text-xl font-bold text-indigo-600 mb-2">Project 1: SaaS Platform</h4>
                     <p class="text-gray-600 mb-4 text-sm">A comprehensive management tool built with React and a Python/Django backend.</p>
                     <p class="text-sm text-gray-500 mb-4">
                         Implemented real-time data synchronization using WebSockets, resulting in a 30% increase in user efficiency.
@@ -112,7 +112,7 @@
                 </div>
 
                 <!-- Project Card 2 --><div class="project-card bg-white rounded-xl shadow-lg p-6 border border-gray-100">
-                    <h4 class="text-xl font-bold text-indigo-600 mb-2">Project Name 2: Data Visualization App</h4>
+                    <h4 class="text-xl font-bold text-indigo-600 mb-2">Project 2: Data Visualization App</h4>
                     <p class="text-gray-600 mb-4 text-sm">Interactive visualization dashboard using D3.js to process large datasets.</p>
                     <p class="text-sm text-gray-500 mb-4">
                         Optimized data fetching and rendering, reducing initial load time by 45%. Focus on responsive design for mobile data analysis.
@@ -128,7 +128,7 @@
                 </div>
 
                 <!-- Project Card 3 --><div class="project-card bg-white rounded-xl shadow-lg p-6 border border-gray-100">
-                    <h4 class="text-xl font-bold text-indigo-600 mb-2">Project Name 3: Mobile-First Game</h4>
+                    <h4 class="text-xl font-bold text-indigo-600 mb-2">Project 3: Mobile-First Game</h4>
                     <p class="text-gray-600 mb-4 text-sm">A small, fun game built purely with Vanilla JavaScript and HTML Canvas.</p>
                     <p class="text-sm text-gray-500 mb-4">
                         Focused on performance and touch controls. Demonstrates fundamental programming concepts and game loop structure.
@@ -177,7 +177,7 @@
                 </div>
                 
                 <p class="mt-8 text-sm text-gray-500">
-                    &copy; 2024 Joseph Jilovec. Built with HTML and Tailwind CSS.
+                    &copy; 2022 Joseph Jilovec.
                 </p>
             </div>
         </div>
