--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                 <!-- Project Card 1 (Dark theme, corrected title) -->
                 <div class="project-card bg-gray-800 rounded-xl shadow-lg p-6 border border-teal-500/50">
-                    <h4 class="text-xl font-bold text-teal-400 mb-2">Project 1: SaaS Platform</h4>
+                    <h4 class="text-xl font-bold text-teal-400 mb-2">SaaS Platform</h4>
                     <p class="text-gray-400 mb-4 text-sm">A comprehensive management tool built with React and a Python/Django backend.</p>
                     <p class="text-sm text-gray-500 mb-4">
                         Implemented real-time data synchronization using WebSockets, resulting in a 30% increase in user efficiency.
@@ -132,7 +132,7 @@
 
                 <!-- Project Card 2 (Dark theme, corrected title) -->
                 <div class="project-card bg-gray-800 rounded-xl shadow-lg p-6 border border-teal-500/50">
-                    <h4 class="text-xl font-bold text-teal-400 mb-2">Project 2: Data Visualization App</h4>
+                    <h4 class="text-xl font-bold text-teal-400 mb-2">Data Visualization App</h4>
                     <p class="text-gray-400 mb-4 text-sm">Interactive visualization dashboard using D3.js to process large datasets.</p>
                     <p class="text-sm text-gray-500 mb-4">
                         Optimized data fetching and rendering, reducing initial load time by 45%. Focus on responsive design for mobile data analysis.
@@ -149,7 +149,7 @@
 
                 <!-- Project Card 3 (Dark theme, corrected title) -->
                 <div class="project-card bg-gray-800 rounded-xl shadow-lg p-6 border border-teal-500/50">
-                    <h4 class="text-xl font-bold text-teal-400 mb-2">Project 3: Mobile-First Game</h4>
+                    <h4 class="text-xl font-bold text-teal-400 mb-2">Mobile-First Game</h4>
                     <p class="text-gray-400 mb-4 text-sm">A small, fun game built purely with Vanilla JavaScript and HTML Canvas.</p>
                     <p class="text-sm text-gray-500 mb-4">
                         Focused on performance and touch controls. Demonstrates fundamental programming concepts and game loop structure.
