--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 </div>
                 
                 <p class="mt-8 text-sm text-gray-500">
-                    &copy; 2024 Joseph Jilovec. Built with HTML and Tailwind CSS.
+                    &copy; 2022 Joseph Jilovec
                 </p>
             </div>
         </div>
