--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 
                 <!-- Big Headline -->
                 <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold leading-tight mb-4 text-white">
-                    I build <span class="text-teal-400">AI-powered tools and systems</span> that actually make your company money and save your team time.
+                    I build <span class="text-teal-400">AI-powered tools and systems</span> that actually make your company money and save your team time
                 </h1>
                 <!-- Sub-Headline -->
                 <h2 class="text-xl sm:text-2xl text-gray-400 mb-10 font-medium">
-                    Custom automations • Internal platforms • Launch architecture • Revenue-focused diagnostics.
+                    Custom automations • Internal platforms • Launch architecture • Revenue-focused diagnostics
                     <br class="hidden sm:inline">
-                    For founders and operators who move fast and hate bloat.
+                    For founders and operators who move fast and avoid bloat
                 </h2>
                 
                 <!-- Removed: Primary CTA Button (Book a Call) -->
@@ -160,7 +160,7 @@
                 My clients are serious operators who want a machine–human hybrid thinker embedded on their side—building tools, aligning teams, and reducing complexity while increasing revenue.
             </p>
             <p class="text-2xl font-bold text-teal-400 mt-8">
-                If that sounds like you, let’s talk.
+                If that sounds like you, let’s talk!
             </p>
         </div>
     </section>
@@ -281,14 +281,9 @@
                 <a href="https://x.com/JilovecJoseph" target="_blank" class="text-gray-300 hover:text-teal-400 transition duration-300">Twitter/X</a>
             </div>
 
-            <!-- Final Small CTA Button (Amber) - Kept this for conversion -->
-            <a href="mailto:realjjemail@gmail.com?subject=AI%20Systems%20Strategy%20Inquiry%20(Footer%20CTA)" class="inline-block cta-amber hover:bg-yellow-600 font-bold py-2 px-6 rounded-lg shadow-md transition duration-300 text-sm">
-                Book a Call &uarr;
-            </a>
-
             <!-- Copyright -->
             <p class="mt-6 text-xs text-gray-500">
-                &copy; 2025 Joseph Jilovec.
+                &copy; 2022 Joseph Jilovec
             </p>
         </div>
     </footer>
